--- a/Jobeet/app/config/routing.yml
+++ b/Jobeet/app/config/routing.yml
@@ -2,6 +2,6 @@ ens_jobeet:
     resource: "@EnsJobeetBundle/Resources/config/routing.yml"
     prefix:   /
 
-app:
-    resource: "@AppBundle/Controller/"
-    type:     annotation
+#app:
+#    resource: "@EnsJobeetBundle/Controller/"
+#    type:     annotation
