--- a/Jobeet/src/Ens/JobeetBundle/Resources/config/routing.yml
+++ b/Jobeet/src/Ens/JobeetBundle/Resources/config/routing.yml
@@ -4,4 +4,4 @@ ens_jobeet_ens_job:
 
 ens_jobeet_homepage:
     path:     /
-    defaults: { _controller: EnsJobeetBundle:Default:index }
+    defaults: { _controller: EnsJobeetBundle:Job:index }
