--- a/Jobeet/src/Ens/JobeetBundle/Resources/config/routing/job.yml
+++ b/Jobeet/src/Ens/JobeetBundle/Resources/config/routing/job.yml
@@ -4,8 +4,10 @@ ens_job_index:
     methods:  GET
 
 ens_job_show:
-    path:     /{id}/show
+    path:     /{company}/{location}/{id}/{position}
     defaults: { _controller: "EnsJobeetBundle:Job:show" }
+    requirements:
+      id: \d+
     methods:  GET
 
 ens_job_new:
