--- a/Jobeet/app/config/config.yml
+++ b/Jobeet/app/config/config.yml
@@ -12,6 +12,8 @@ parameters:
 framework:
     #esi:             ~
     #translator:      { fallbacks: ["%locale%"] }
+    profiler:
+        collect: false
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
