--- a/Jobeet/app/config/services.yml
+++ b/Jobeet/app/config/services.yml
@@ -1,9 +1,15 @@
 # Learn more about services, parameters and containers at
 # http://symfony.com/doc/current/service_container.html
 parameters:
-#    parameter_name: value
 
 services:
-#    service_name:
-#        class: AppBundle\Directory\ClassName
-#        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+    star_rating.type:
+        class: blackknight467\StarRatingBundle\Form\RatingType
+        tags:
+            - { name: form.type, alias: rating }
+
+    star_rating.twig:
+        class: blackknight467\StarRatingBundle\Extensions\StarRatingExtension
+        tags: [{ name: twig.extension }]
+        arguments:
+            - '@service_container'
