--- a/Jobeet/composer.json
+++ b/Jobeet/composer.json
@@ -18,7 +18,8 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
         "doctrine/doctrine-fixtures-bundle": "dev-master",
-        "doctrine/data-fixtures": "dev-master"
+        "doctrine/data-fixtures": "dev-master",
+        "blackknight467/star-rating-bundle": "2.*"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
