--- a/Jobeet/src/Ens/JobeetBundle/Resources/config/routing/job.yml
+++ b/Jobeet/src/Ens/JobeetBundle/Resources/config/routing/job.yml
@@ -15,6 +15,11 @@ ens_job_new:
     defaults: { _controller: "EnsJobeetBundle:Job:new" }
     methods:  [GET, POST]
 
+ens_job_rate:
+    path:     /new_rate
+    defaults: { _controller: "EnsJobeetBundle:Job:rate" }
+    methods:  [GET, POST]
+
 ens_job_edit:
     path:     /{id}/edit
     defaults: { _controller: "EnsJobeetBundle:Job:edit" }
